--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/datacycle.svg" />
+    <link rel="icon" href="/src/assets/icon/icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>IData System</title>
+    <title>数据集成</title>
   </head>
   <body>
     <div id="app"></div>
